<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_weight="20"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/police_station_fetch"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/police_station_fetching"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/police_station_title"
                android:id="@+id/police_station_title"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/police_station_count"
                android:layout_below="@+id/police_station_title"
                android:text="@string/police_station"
                android:gravity="center"
                android:layout_marginBottom="10sp"/>
        </RelativeLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:id="@+id/progressBar_police"
            android:layout_height="65dp"
            android:layout_weight="1"/>
    </LinearLayout>


<fragment
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowPolice" />
</LinearLayout>