<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:id="@+id/upperlayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:id="@+id/homeDisplayTextView"
            android:text="@string/homeDisplay"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#3F058D" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/lowerlayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                        <Button
                            android:id="@+id/inviteConnection"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_gravity="center"
                            android:layout_margin="16dp"
                            android:background="@drawable/invite_connection"
                            android:elevation="18dp"
                            android:paddingLeft="32dp"
                            android:paddingTop="16dp"
                            android:paddingRight="32dp"
                            android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inviteConnection"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:id="@+id/receiveConnection"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:background="@drawable/received_connection"
                    android:elevation="18dp"
                    android:paddingLeft="32dp"
                    android:paddingTop="16dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiveConnection"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <Button
                android:id="@+id/showConnection"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="@drawable/matched_connection"
                android:elevation="18dp"
                android:paddingLeft="32dp"
                android:paddingTop="16dp"
                android:paddingRight="32dp"
                android:paddingBottom="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showConnection"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>